# setup.py

./: .gitignore  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
mypackage/: __main__.py  mypackage.py
mypackage/tests/: test_mypackage.py
