[metadata]
name = mypackage
version = 1.0
description = My package
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords = my, package, keywords
author = My Name
author_email = me@example.com
url = https://github.com/me/mypackage
project_urls =
    Documentation = https://mypackage.readthedocs.io/en/stable/
license = BSD-2-Clause

[options]
packages = find:
install_requires =
    setuptools
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.entry_points]
console_scripts =
    myscript = mypackage.mypackage:main

[bdist_wheel]
universal = true
