[metadata]
name = mypackage
version = attr: mypackage.__version__
description = My description
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = my, package, keywords
author = My Name
author_email = me@example.com
url = https://github.com/me/mypackage
project_urls =
    Documentation = https://mypackage.readthedocs.io/en/stable/
license = BSD-2-Clause

[options]
packages = find:
include_package_data = false
zip_safe = false
install_requires =
    setuptools
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    myscript = mypackage.mypackage:main

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
